--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,1 +1,1 @@
-.container{ width: 500px; height: 500px; padding: 24px; border-radius: 8px; border: 1px solid var(--line-gray); display: flex; align-items: center; justify-content: center }
+.container{ width: 500px; height: 500px; padding: 24px; border-radius: 8px; display: flex; align-items: center; justify-content: center }
